# CursorData-SDK

./: .gitignore  LICENSE  MANIFEST.in  README.md  TESTING_AUDIT.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: Makefile  api.rst  conf.py  contributing.rst  cursordiskkv.rst  index.rst  installation.rst  make.bat  quickstart.rst
docs/_static/: custom.css  custom.js
examples/: basic_usage.py
scripts/: explore_cursordiskkv.py  explore_cursordiskkv_detailed.py
src/cursordata/: __init__.py  client.py  collections.py  cursordiskkv_models.py  model_groups.py  models.py  query.py  utils.py
tests/: __init__.py  conftest.py  factories.py  test_client.py  test_collections.py  test_edge_cases.py  test_error_paths.py  test_integration.py  test_model_groups.py  test_models.py  test_property_based.py  test_query.py  test_utils.py  test_utils_helpers.py
