[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursordata-sdk"
version = "0.1.0"
description = "SDK for interacting with Cursor editor's local SQLite usage data database"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Shaun VanWeelden", email = "shaun.t.vanweelden@gmail.com"},
]
keywords = ["cursor", "sqlite", "sdk", "usage-data", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Software Development :: Version Control",
    "Typing :: Typed",
]
dependencies = [
    "typing-extensions>=4.0.0",
    "python-dateutil>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/shaun3141/CursorData-SDK"
Repository = "https://github.com/shaun3141/CursorData-SDK"
Issues = "https://github.com/shaun3141/CursorData-SDK/issues"
Documentation = "https://github.com/shaun3141/CursorData-SDK/tree/main/docs/_build/html"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "pydata-sphinx-theme>=0.15.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cursordata"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/cursordata",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

